[package]
name = "rustconf-code"
version = "1.0.0"
authors = ["Rebecca Turner <rbt@sent.as>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.6", features = [ "blocking" ] }
serde_json = "1.0.56"
structopt = "0.3.15"
eyre = "0.6.0"
